SERVER-7352 do not try to exit cleanly in Windows exception handler

In Windows, exit after an access violation the same way we exit on other
platforms after a segfault; with ::_exit(EXIT_ABRUPT).